[package]
name = "no-sql-rust-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
current_platform = "0.2.0"
dashmap = "5.5.3"
rand = "0.8.5"
rayon = "1.8.0"
term_size = "0.3.2"
threadpool = "1.8.1"
